# API-RobotFramework

./: Dockerfile  README.md  base.resource  disable_warnings.py  docker-compose.yml  entrypoint.sh  interactive_console_output.xml  log.html  output.xml  pyproject.toml  report.html  variables.yaml
.github/: CODEOWNERS
env/: dev.yaml  hml.yaml  load.py  prod.yaml
keywords/: common_keywords.resource
resources/authentication/: authentication.resource
resources/headers/: authentication_header.py  index.resource  shared.py
resources/headers/testPlan/: testPlan.py
resources/payloads/: authentication_payload.py  index.resource  users.py
resources/payloads/testPlan/: testPlan_payload.py
resources/requests/: requests.resource
resources/responses/: validate_response_schemas.py  validate_response_status_code.resource
resources/schemas/: index.resource  schema_login.py  schema_sufop.py  schema_warranty_card.py
resources/services/: index.resource  login.resource  user.resource
resources/utils/: http.robot  send_report.py
tests/: login.robot  user.robot
